# itt

./: .gitignore  CMakeLists.txt
scripts/: embed_dictionary.py
src/: cat.c  cat.h  main.c  main.cpp  pwdgen.cpp  pwdgen.h  specs.cpp  specs.h
